scss/components/introModal.scss
.intro-modal {
	$intro-text-color-light: #e9edec;
	$intro-text-color-dark: #4c3a27;
	$intro-ui-border: 2px solid $text-color;

	position: fixed;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;

	background-color: rgba(219, 202, 166, 1.0);
	text-align: center;

	.page {
		display: flex;
		flex-direction: column;
		justify-content: center;
		align-items: center;
		height: 100%;
		position: relative;
		margin: 0 auto;
	}

	.p0 {
		width: 600px;

		.title-block {
			transform: translateY(72px);
		}

		h1 {
			@extend %merriweather-light;
			font-size: 68px;
			color: $text-color;
			text-transform: uppercase;
			margin: 0;
		}

		h3 {
			@extend %lato-normal;
			font-size: 24px;
			color: $intro-text-color-light;
			text-transform: uppercase;
			margin: 0;
		}

		img {
			width: 100%;
			border: 2px solid white;
		}

	}

	.p1 {
		width: 900px;

		.title-block {
			transform: translateY(42px);
		}

		h2 {
			@extend %merriweather-ultra-bold;
			font-size: 24px;
			color: $text-color;
			text-transform: uppercase;
			margin: 0;
		}

		h3 {
			@extend %merriweather-light;
			font-size: 18px;
			color: $text-color;
			text-transform: uppercase;
			margin: 0;
		}

		.content {
			width: 100%;
			height: 480px;
			box-sizing: border-box;
			padding: 84px 44px 60px 44px;
			border: 2px solid white;
		}

		ol {
			display: flex;
			flex-flow: row wrap;
			justify-content: space-between;
			width: 100%;
			height: 100%;

			text-align: left;
		}

		$intro-item-height: 140px;
		$descender-height: 48px;
		li {
			position: relative;
			display: inline-block;
			flex: 0 0 365px;
			height: $intro-item-height;

			.ordinal {
				position: absolute;
				left: 0;
				top: 0;
				line-height: $intro-item-height;

				@extend %merriweather-bold;
				font-size: 180px;
				color: $intro-text-color-light;
				opacity: 0.7;

				&.descender {
					line-height: $intro-item-height - $descender-height;
				}
			}

			&.wider {
				flex: 0 0 380px;
			}

			.item {
				width: 250px;
				position: absolute;
				bottom: 4px;
				right: 0;

				p {
					width: 100%;
					margin: 0 0 18px 0;

					@extend %merriweather-light;
					font-size: 13px;
					color: $intro-text-color-dark;
				}

				img {
					width: 100%;
				}
			}
		}

	}

	p {
		width: 400px;
		margin: 24px 0;
		line-height: 20px;

		@extend %merriweather-light;
		font-size: 14px;
		color: $intro-text-color-dark;
	}

	.intro-modal-button {
		width: 100px;
		border: $intro-ui-border;
		padding: 6px 0;

		@extend %merriweather-light;
		font-size: 18px;
		text-transform: uppercase;
		cursor: pointer;
	}

	.footer {
		$intro-footer-font-size: 13px;
		margin-top: 12px;

		> div {
			display: inline-block;
			margin-right: 24px;

			@extend %merriweather-light;
			font-size: 13px;
			cursor: pointer;
		}

		label {
			$checkbox-size: 20px;
			$checkbox-inner-padding: 2px;
			$checkbox-margin-right: 6px;
			$checkbox-offset-vert: -4px;

			display: inline-block;
			position: relative;
			margin-left: $checkbox-size;

			@extend %merriweather-light;
			font-size: $intro-footer-font-size;
			cursor: pointer;

			&::before,
			&.checked::after {
				display: block;
				position: absolute;
				box-sizing: content-box;
				content: '';
			}
			&::before {
				left: -$checkbox-size - $checkbox-margin-right;
				top: $checkbox-offset-vert;
				width: $intro-footer-font-size;
				height: $intro-footer-font-size;
				border: $intro-ui-border;
				padding: $checkbox-inner-padding;
			}
			&.checked::after {
				left: -($checkbox-size - 2*$checkbox-inner-padding) - $checkbox-margin-right;
				top: $checkbox-offset-vert + 2*$checkbox-inner-padding;
				width: $intro-footer-font-size;
				height: $intro-footer-font-size;
				padding: 0;
				background-color: $text-color;
				opacity: 0.8;
			}

		}

		input {
			display: none;
		}
	}
	
}

